--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -1,7 +1,7 @@
 html {
     --accent1: #C79B66;
     --text1: #fff;
-    --text2: #000;
+    --text2: #000000;
     --background1: #869377;
 }
 
@@ -66,6 +66,15 @@ a {
   }
 }
 
+.text {
+  p {
+    font-family: 'Roboto', sans-serif;
+  }
+
+  a {
+    font-weight: 500;
+  }
+}
 
 @import url('https://fonts.cdnfonts.com/css/prater-sans');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Trocchi&display=swap');
