--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -1,5 +1,5 @@
 html {
-    --accent1: #C79B66;
+    --accent1: #ca9c6e;
     --text1: #fff;
     --text2: #000000;
     --background1: #869377;
@@ -68,13 +68,21 @@ a {
 
 .text {
   p {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Avenir Next W05 Medium";  
   }
 
   a {
     font-weight: 500;
   }
+
+  img {
+    max-width: 100%;
+  }
+}
+
+.center {
+  text-align: center
 }
 
 @import url('https://fonts.cdnfonts.com/css/prater-sans');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Trocchi&display=swap');
+@import url(https://db.onlinewebfonts.com/c/8b2f5f03b0c907b9b7056ae52ed03a09?family=Avenir+Next+W05+Medium); 
